plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.140'
}

version = mod_version
group = 'xfacthd.foup'

base {
    archivesName = 'foup'
}

java.toolchain.languageVersion = JavaLanguageVersion.of(25)

neoForge {
    version = project.neo_version

    validateAccessTransformers = true

    runs {
        client {
            client()
            systemProperty 'neoforge.enabledGameTestNamespaces', 'foup'
            systemProperty 'terminal.ansi', 'true'
        }

        server {
            server()
            gameDirectory = project.file('run_server')
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', 'foup'
        }

        gameTestServer {
            type = "gameTestServer"
            gameDirectory = project.file('run_gametest')
            systemProperty 'neoforge.enabledGameTestNamespaces', 'foup'
        }

        data {
            clientData()
            programArguments.addAll '--mod', 'foup', '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        foup {
            sourceSet(sourceSets.main)
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

repositories {
    maven {
        name = 'gigaherz maven'
        url = 'https://dogforce-games.com/maven'
        content {
            includeGroup('dev.gigaherz.graph')
        }
    }
    maven {
        name = 'TerraformersMC maven'
        url = "https://maven.terraformersmc.com/"
        content {
            includeGroup('dev.emi')
        }
    }
}

dependencies {
    jarJar(implementation "dev.gigaherz.graph:GraphLib3:${graphlib_version}") {
        version {
            strictly "[${graphlib_version}, ${graphlib_version_upper})"
            prefer graphlib_version
        }
    }

    compileOnly("dev.emi:emi-neoforge:${emi_version}+${emi_mc_version}:api")
    //runtimeOnly("dev.emi:emi-neoforge:${emi_version}+${emi_mc_version}")
}

tasks.withType(ProcessResources).configureEach {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            neo_version_range      : neo_version_range,
            mod_version            : mod_version
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/neoforge.mods.toml']) {
        expand replaceProperties
    }
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
    options.compilerArgs << "-Xmaxerrs" << "10000"
}
